[gd_scene load_steps=8 format=3 uid="uid://s65dq4a3p8hf"]

[ext_resource type="Script" path="res://scripts/minimap.gd" id="1_w81rf"]
[ext_resource type="PackedScene" uid="uid://si04mud574jh" path="res://scenes/compound_button.tscn" id="2_j25qj"]
[ext_resource type="Texture2D" uid="uid://bsmgrauj4vnu0" path="res://graphics/down.png" id="3_mbj0w"]
[ext_resource type="Texture2D" uid="uid://cjdleaou0jut7" path="res://graphics/left.png" id="5_di6tp"]
[ext_resource type="Texture2D" uid="uid://c78rrp5ugr5hf" path="res://graphics/right.png" id="6_hwh7i"]
[ext_resource type="Texture2D" uid="uid://brftgejin5mdt" path="res://graphics/plus.png" id="7_t3o1m"]
[ext_resource type="Texture2D" uid="uid://bb8xs1mxt2sfg" path="res://graphics/minus.png" id="8_noicf"]

[node name="Minimap" type="HBoxContainer"]
z_index = 2
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -82.0
offset_right = 82.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_w81rf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="CompoundButton2" parent="VBoxContainer" groups=["Buttons"] instance=ExtResource("2_j25qj")]
layout_mode = 2

[node name="CompoundButton" parent="VBoxContainer" groups=["Buttons"] instance=ExtResource("2_j25qj")]
layout_mode = 2

[node name="ButtonImage" parent="VBoxContainer/CompoundButton" index="0"]
texture = ExtResource("3_mbj0w")
stretch_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
z_index = -1
layout_mode = 2
mouse_filter = 2

[node name="MinimapPanel" type="PanelContainer" parent="VBoxContainer2"]
clip_children = 2
custom_minimum_size = Vector2(168, 168)
layout_mode = 2

[node name="Grid" type="GridContainer" parent="VBoxContainer2/MinimapPanel"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="CompoundButton" parent="VBoxContainer2/HBoxContainer" groups=["Buttons"] instance=ExtResource("2_j25qj")]
layout_mode = 2

[node name="ButtonImage" parent="VBoxContainer2/HBoxContainer/CompoundButton" index="0"]
texture = ExtResource("5_di6tp")

[node name="CompoundButton2" parent="VBoxContainer2/HBoxContainer" groups=["Buttons"] instance=ExtResource("2_j25qj")]
layout_mode = 2

[node name="ButtonImage" parent="VBoxContainer2/HBoxContainer/CompoundButton2" index="0"]
texture = ExtResource("6_hwh7i")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="CompoundButton" parent="VBoxContainer3" groups=["Buttons"] instance=ExtResource("2_j25qj")]
layout_mode = 2

[node name="ButtonImage" parent="VBoxContainer3/CompoundButton" index="0"]
texture = ExtResource("7_t3o1m")

[node name="CompoundButton2" parent="VBoxContainer3" groups=["Buttons"] instance=ExtResource("2_j25qj")]
layout_mode = 2

[node name="ButtonImage" parent="VBoxContainer3/CompoundButton2" index="0"]
texture = ExtResource("8_noicf")

[connection signal="pressed" from="VBoxContainer/CompoundButton2" to="." method="move_up"]
[connection signal="pressed" from="VBoxContainer/CompoundButton" to="." method="move_down"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/CompoundButton" to="." method="move_left"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/CompoundButton2" to="." method="move_right"]
[connection signal="pressed" from="VBoxContainer3/CompoundButton" to="." method="_on_scale_up"]
[connection signal="pressed" from="VBoxContainer3/CompoundButton2" to="." method="_on_scale_down"]

[editable path="VBoxContainer/CompoundButton2"]
[editable path="VBoxContainer/CompoundButton"]
[editable path="VBoxContainer2/HBoxContainer/CompoundButton"]
[editable path="VBoxContainer2/HBoxContainer/CompoundButton2"]
[editable path="VBoxContainer3/CompoundButton"]
[editable path="VBoxContainer3/CompoundButton2"]
